Update CHANGELOG to prep for 4.0.0-M1 release