@@ -13,10 +13,329 @@ For Helidon 1.x releases please see [Helidon 1.x CHANGELOG.md](https://github.co
 
 ## [4.0.0-M1]
 
+This is the first Milestone build of Helidon 4.0.0 and is intended as a preview release only. Do not use this release in production. It is suitable only for experimentation. APIs are subject to change. Documentation is incomplete. And some functionality is experimental and not fully tested.
+
+The big news in Helidon 4.0.0 is the introduction of Helidon Nima -- a [ground up webserver implementation based on JDK Project Loom virtual threads](https://medium.com/helidon/helidon-n%C3%ADma-helidon-on-virtual-threads-130bb2ea2088). 
+
+Java 20 is required to use Heldon 4.0.0-M1.
+
+Any easy way to get started with Helidon 4.0.0-M1 is using the [helidon CLI](https://github.com/helidon-io/helidon#helidon-cli)
+
+```
+helidon init --version 4.0.0-M1
+```
+
+### Notable Changes
+
+- Removed the Helidon Reactive WebServer and WebClient that were based on Netty as we fully commit to new implementations based on virtual threads that have a blocking style API (Project Níma).
+- Converted other modules with reactive APIs to blocking style APIs. The `io.helidon.common.reactive` APIs will stay as general purpose reactive utilities and operators
+- Upgraded MicroProfile support to MicroProfile 6 and Jakarta 10 Core Profile running on the Níma WebServer
+- Laid the foundation for Helidon Inject, a deterministic, source-code-first, compile time injection framework
+- Started adoption of Helidon Builders, a builder code generation framework
+
+The above is work-in-progress. There are still missing features, and APIs are undergoing change. For example
+the Grpc implementation is limited and MicroProfile Grpc support is temporarily absent.
+
+
 ### CHANGES
 
-- grpc module has fewer features (temporary)
-- MicroProfile grpc module is removed from Helidon (temporary)
+- Builders: updates [6710](https://github.com/helidon-io/helidon/pull/6710)
+- Builders: builder `toString` method update [7142](https://github.com/helidon-io/helidon/pull/7142)
+- Builders: support lowercase for modifiers names [6844](https://github.com/helidon-io/helidon/pull/6844)
+- Builders: ConfigBean not resolving config correctly [6652](https://github.com/helidon-io/helidon/pull/6652)
+- Builders: Default prefixed builder types renamed to be suffixed [6796](https://github.com/helidon-io/helidon/pull/6796)
+- Builders: Document assumptions about types of current processing round [7072](https://github.com/helidon-io/helidon/pull/7072)
+- Builders: Fix error messages in validation task of builder processor. [7070](https://github.com/helidon-io/helidon/pull/7070)
+- Builders: Follow up changes for builders PR [7074](https://github.com/helidon-io/helidon/pull/7074)
+- Builders: GeneratedConfigBean should be easily available from Config-driven-services  [6680](https://github.com/helidon-io/helidon/pull/6680)
+- Builders: New config builders [7008](https://github.com/helidon-io/helidon/pull/7008)
+- Builders: Optional Builder methods should default to package private [6593](https://github.com/helidon-io/helidon/pull/6593)
+- Builders: Pico cfg driven with additional ctor injection points fix [6612](https://github.com/helidon-io/helidon/pull/6612)
+- Builders: TypeInfo and Builder Refinements [6729](https://github.com/helidon-io/helidon/pull/6729)
+- Config: Config with injection [7080](https://github.com/helidon-io/helidon/pull/7080)
+- Config: Generate config metadata fix. [7145](https://github.com/helidon-io/helidon/pull/7145)
+- GraphQL: Update GraphQLServiceTest to use @ServerTest and Http1Client [6795](https://github.com/helidon-io/helidon/pull/6795)
+- Grpc: Support for grpc proto packages. [7158](https://github.com/helidon-io/helidon/pull/7158)
+- Inject: All Pico services should default to a lesser than DEFAULT_WEIGHT [6590](https://github.com/helidon-io/helidon/pull/6590)
+- Inject: Allow empty list injection [7160](https://github.com/helidon-io/helidon/pull/7160)
+- Inject: Annotation for Named that accepts a class [6779](https://github.com/helidon-io/helidon/pull/6779)
+- Inject: Attempt to do type regeneration turned into an error condition instead of being logged [7155](https://github.com/helidon-io/helidon/pull/7155)
+- Inject: Build log fix [7128](https://github.com/helidon-io/helidon/pull/7128)
+- Inject: Constructors are now intercepted with appropriate interceptors only. [6648](https://github.com/helidon-io/helidon/pull/6648)
+- Inject: Creates a clean set of Pico examples [6800](https://github.com/helidon-io/helidon/pull/6800)
+- Inject: Custom Annotation Processor Refinements [6883](https://github.com/helidon-io/helidon/pull/6883)
+- Inject: Fix pico lookup method returning <T> from generic criteria [6582](https://github.com/helidon-io/helidon/pull/6582)
+- Inject: Fixes incremental compilation for Pico services and running unit tests from IDE [6863](https://github.com/helidon-io/helidon/pull/6863)
+- Inject: Inheritance in DefaulQualifierAndValue [6639](https://github.com/helidon-io/helidon/pull/6639)
+- Inject: Interceptor Redo [6658](https://github.com/helidon-io/helidon/pull/6658)
+- Inject: Issue 6634 fix - interceptor args [6640](https://github.com/helidon-io/helidon/pull/6640)
+- Inject: Pico ConfiguredBy services with abstract base [6589](https://github.com/helidon-io/helidon/pull/6589)
+- Inject: Pico anno processor rewrite [6705](https://github.com/helidon-io/helidon/pull/6705)
+- Inject: Pico interceptor arguments are now correctly handled. [6642](https://github.com/helidon-io/helidon/pull/6642)
+- Inject: Preparation for Pico Extensibility Enhancements [6936](https://github.com/helidon-io/helidon/pull/6936)
+- Inject: Rename Pico -> Inject / Injection [7174](https://github.com/helidon-io/helidon/pull/7174)
+- Inject: Rename Pico Module [6682](https://github.com/helidon-io/helidon/pull/6682)
+- Inject: TypeInfo and TypedElementName API name tuning [6841](https://github.com/helidon-io/helidon/pull/6841)
+- Inject: module-info parsing [7156](https://github.com/helidon-io/helidon/pull/7156)
+- Inject: remove unnecessary method call to modifiers [6870](https://github.com/helidon-io/helidon/pull/6870)
+- LRA: Fix LRA Logging [6734](https://github.com/helidon-io/helidon/pull/6734)
+- LRA: LRA coordinator docker fix [6727](https://github.com/helidon-io/helidon/pull/6727)
+- LRA: expunge reactive webclient [7112](https://github.com/helidon-io/helidon/pull/7112)
+- MP Config: convertToHelidon exception fix [6834](https://github.com/helidon-io/helidon/pull/6834)
+- MP Metrics: MP Metrics 5.0 support for 4.x [7139](https://github.com/helidon-io/helidon/pull/7139)
+- MP RestClient: Helidon connector configuration and redirects [7169](https://github.com/helidon-io/helidon/pull/7169)
+- MP RestClient: Initial implementation of Helidon connector for Jakarta REST client [7039](https://github.com/helidon-io/helidon/pull/7039)
+- MP Server: Support for injection of ServerRequest and ServerResponse also via CDI [6784](https://github.com/helidon-io/helidon/pull/6784)
+- MP Server: Helidon main class [7136](https://github.com/helidon-io/helidon/pull/7136)
+- MP Telemetry: MicroProfile Telemetry Support [6493](https://github.com/helidon-io/helidon/pull/6493)
+- MP Telemetry: cleanup dependencies [6815](https://github.com/helidon-io/helidon/pull/6815)
+- Media: Fix TODO to handle close call on entity [6501](https://github.com/helidon-io/helidon/pull/6501)
+- Media: Move SnakeYAML log suppression to slightly earlier in the code path [6661](https://github.com/helidon-io/helidon/pull/6661)
+- Messaging: WLS JMS connector doesn't support named factory bean [6923](https://github.com/helidon-io/helidon/pull/6923)
+- Metrics: Convert PrometheusSupport from a reactive WebServer Service to a HelidonFeatureSupport [6837](https://github.com/helidon-io/helidon/pull/6837)
+- Metrics: Fix path handling for metrics observe provider [7178](https://github.com/helidon-io/helidon/pull/7178)
+- Metrics: MicroMeter contains Nima and SE integration [7090](https://github.com/helidon-io/helidon/pull/7090)
+- Neo4j: Alternative implementation of Neo4jHealthCheck based on io.helidon.heath.HealthCheck [6850](https://github.com/helidon-io/helidon/pull/6850)
+- Neo4j: Nima support [6909](https://github.com/helidon-io/helidon/pull/6909)
+- OCI: Pico extensibility support for the OCI SDK [6982](https://github.com/helidon-io/helidon/pull/6982)
+- OpenAPI 3.1 support for 4.x [6954](https://github.com/helidon-io/helidon/pull/6954)
+- OpenAPI: OpenApiFeature instead of SeOpenApiFeature [7103](https://github.com/helidon-io/helidon/pull/7103)
+- Reactive removal: Module helidon-reactive-webclient-jaxrs is no longer needed [6816](https://github.com/helidon-io/helidon/pull/6816)
+- Reactive removal: Remove grpc and MP grpc based on Netty grpc from Helidon [7069](https://github.com/helidon-io/helidon/pull/7069)
+- Reactive removal: common/rest and vault [7033](https://github.com/helidon-io/helidon/pull/7033)
+- Reactive removal: Remove reactive module and netty and any additional cleanup [7165](https://github.com/helidon-io/helidon/issues/7165)
+- Security: rework to synchronous [6230](https://github.com/helidon-io/helidon/pull/6230)
+- Telemetry: Remove Microprofile dependencies from SE Telemetry [6998](https://github.com/helidon-io/helidon/pull/6998)
+- Test: Add @target(ElementType.METHOD) for annotation @mptest [6489](https://github.com/helidon-io/helidon/pull/6489)
+- Test: Use Hamcrest assertions instead of JUnit in tests/integration/jms (#1749) [6643](https://github.com/helidon-io/helidon/pull/6643)
+- Test: 7097 flaky HTTP/2 bookstore test [7137](https://github.com/helidon-io/helidon/pull/7137)
+- Test: Add enum related config bean tests [6592](https://github.com/helidon-io/helidon/pull/6592)
+- Test: Convenient flushing on response commit [6673](https://github.com/helidon-io/helidon/pull/6673)
+- Test: Disable intermittently-failing async metrics MP test until we understand the failure [6980](https://github.com/helidon-io/helidon/pull/6980)
+- Test: Port of tests/functional/config-profiles over to Nima [6826](https://github.com/helidon-io/helidon/pull/6826)
+- Test: Re-enables ServerTest.java in nima/openapi [6585](https://github.com/helidon-io/helidon/pull/6585)
+- Test: Reenables JerseyPropertiesTest.java in microprofile/server [6594](https://github.com/helidon-io/helidon/pull/6594)
+- Test: Removed old bookstore-se app and renamed bookstore-nima to bookstore-se [6790](https://github.com/helidon-io/helidon/pull/6790)
+- Test: Removed tests/integration/native-image/se-1 [6882](https://github.com/helidon-io/helidon/pull/6882)
+- Test: Update MessagingHealthTest to use Nima WebClient instead of Reactive WebClient [6814](https://github.com/helidon-io/helidon/pull/6814)
+- Tracing: Add Baggage to Helidon Span [6581](https://github.com/helidon-io/helidon/pull/6581)
+- Tracing: Support for different propagators for Jaeger OpenTelemetry integration. [6586](https://github.com/helidon-io/helidon/pull/6586)
+- WebClient: Add header and config builder method to  webclient builder [7056](https://github.com/helidon-io/helidon/pull/7056)
+- WebClient: Add relativeUris configuration to determine if relative or absolute URI will be used in the request [6952](https://github.com/helidon-io/helidon/pull/6952)
+- WebClient: Add static factory methods to Http1Client [7119](https://github.com/helidon-io/helidon/pull/7119)
+- WebClient: Additional methods for Http1ClientRequest  [6983](https://github.com/helidon-io/helidon/pull/6983)
+- WebClient: Keep alive is now configurable per request [7122](https://github.com/helidon-io/helidon/pull/7122)
+- WebClient: Shortcuts for media support [6951](https://github.com/helidon-io/helidon/pull/6951)
+- WebClient: Skip uri encoding feature [6910](https://github.com/helidon-io/helidon/pull/6910)
+- WebClient: Support for lastEndpointUri() in Webclient responses [7113](https://github.com/helidon-io/helidon/pull/7113)
+- WebClient: Use current context instead of creating new one in ClientRequest [7014](https://github.com/helidon-io/helidon/pull/7014)
+- WebClient: Validate http request and response headers when using the webclient [6515](https://github.com/helidon-io/helidon/pull/6515)
+- WebClient: WebClient Proxy Support [6441](https://github.com/helidon-io/helidon/pull/6441)
+- WebClient: configuration for timeouts and keepAlive [6971](https://github.com/helidon-io/helidon/pull/6971)
+- WebClient: read timeout per request [7135](https://github.com/helidon-io/helidon/pull/7135)
+- WebClient: redirect support [6929](https://github.com/helidon-io/helidon/pull/6929)
+- WebClient: security propagation module [7109](https://github.com/helidon-io/helidon/pull/7109)
+- WebClient: services for Níma client (HTTP/1 only for now). [6752](https://github.com/helidon-io/helidon/pull/6752)
+- WebClient: should have a mode that is resilient to bad media/content types [6999](https://github.com/helidon-io/helidon/pull/6999)
+- WebClient: support for properties [7028](https://github.com/helidon-io/helidon/pull/7028)
+- WebServer: Avoid reflecting back user data in exception messages [6990](https://github.com/helidon-io/helidon/pull/6990)
+- WebServer: Convenient method status(int) in ServerResponse.  [6833](https://github.com/helidon-io/helidon/pull/6833)
+- WebServer: HTTP/2 header continuation [6907](https://github.com/helidon-io/helidon/pull/6907)
+- WebServer: Rename `ServerConfig` to `WebServerConfig` [7108](https://github.com/helidon-io/helidon/pull/7108)
+- WebServer: Set running flag to false in shutdownhook [6428](https://github.com/helidon-io/helidon/pull/6428)
+- WebServer: TLS reloading fixed [7140](https://github.com/helidon-io/helidon/pull/7140)
+- WebServer: Writing to closed socket with a silent error [6887](https://github.com/helidon-io/helidon/pull/6887)
+- Build: Change provided and optional to just optional - iteration 1 (#6495) [6503](https://github.com/helidon-io/helidon/pull/6503)
+- Build: Change provided and optional to just optional - iteration 2 (#6495) [6650](https://github.com/helidon-io/helidon/pull/6650)
+- Build: Fixed parallel build. [7111](https://github.com/helidon-io/helidon/pull/7111)
+- Build: Switch metrics API jar scope to compile from provided [6677](https://github.com/helidon-io/helidon/pull/6677)
+- Dependencies: Kafka bump up 2.8.1 > 3.4.0 [6708](https://github.com/helidon-io/helidon/pull/6708)
+- Dependencies: Update grpc-java to version 1.54.1 [6693](https://github.com/helidon-io/helidon/pull/6693)
+- Dependencies: Upgrade Jakarta Annotations to 2.1.1 [6595](https://github.com/helidon-io/helidon/pull/6595)
+- Dependencies: Upgrade Jakarta EL to 5.0.1 [6603](https://github.com/helidon-io/helidon/pull/6603)
+- Dependencies: Upgrade Jakarta jsonb to 3.0.0 and jsonp to 2.1.1 [6602](https://github.com/helidon-io/helidon/pull/6602)
+- Dependencies: Upgrade graphql-java to 18.x [6965](https://github.com/helidon-io/helidon/pull/6965)
+- Dependencies: Upgrade jersey to 3.1.2 [7147](https://github.com/helidon-io/helidon/pull/7147)
+- Dependencies: Upgrade to WebSocket 2.1 API [6617](https://github.com/helidon-io/helidon/pull/6617)
+- Dependencies: Upgrades JPA to 3.1 [6684](https://github.com/helidon-io/helidon/pull/6684)
+- Dependencies: dependency upgrades: grpc, guava, jackson, netty [7162](https://github.com/helidon-io/helidon/pull/7162)
+- Docs: MP Telemetry Documentation [6772](https://github.com/helidon-io/helidon/pull/6772)
+- Docs: Some minor tweaks to the REST documentation [6686](https://github.com/helidon-io/helidon/pull/6686)
+- Docs: Update documentation of composite provider flag. [6597](https://github.com/helidon-io/helidon/pull/6597)
+- Docs: improve pico integration docs for oci sdk [7040](https://github.com/helidon-io/helidon/pull/7040)
+- Docs: fix links for openapi in 4x [6688](https://github.com/helidon-io/helidon/pull/6688)
+- Docs: New document describing the client and server WebSocket APIs in Nima [6578](https://github.com/helidon-io/helidon/pull/6578)
+- Examples: Add metrics to quickstarts [7114](https://github.com/helidon-io/helidon/pull/7114)
+- Examples: Create file validations [6608](https://github.com/helidon-io/helidon/pull/6608)
+- Examples: Fix Helidon Archetype generates broken projects [6722](https://github.com/helidon-io/helidon/pull/6722)
+- Examples: Fix archetype build [7177](https://github.com/helidon-io/helidon/pull/7177)
+- Examples: Fix params of @ExampleObject annotations in examples (#6791) [6792](https://github.com/helidon-io/helidon/pull/6792)
+- Examples: Fix post merge compile error in examples.micrometer.se.MainTest [7115](https://github.com/helidon-io/helidon/pull/7115)
+- Examples: MP Telemetry examples [6813](https://github.com/helidon-io/helidon/pull/6813)
+- Examples: Nima custom archetype [6327](https://github.com/helidon-io/helidon/pull/6327)
+- Examples: OCI examples remove reactive API [6969](https://github.com/helidon-io/helidon/pull/6969)
+- Examples: Pico example pre req changes [6801](https://github.com/helidon-io/helidon/pull/6801)
+- Examples: Port of static content example to Nima webserver [6778](https://github.com/helidon-io/helidon/pull/6778)
+- Examples: Porting of example to Nima and removal of reactive dependencies [6839](https://github.com/helidon-io/helidon/pull/6839)
+- Examples: Refactor examples/nima/media into examples/media/multipart [6812](https://github.com/helidon-io/helidon/pull/6812)
+- Examples: Relocate Pico Examples [6783](https://github.com/helidon-io/helidon/pull/6783)
+- Examples: Removed examples/webserver/jersey [6877](https://github.com/helidon-io/helidon/pull/6877)
+- Examples: SE/Reactive archetype removal [6671](https://github.com/helidon-io/helidon/pull/6671)
+- Examples: Temporarily remove examples generated by OpenAPITools  [6667](https://github.com/helidon-io/helidon/pull/6667)
+- Examples: Update examples/graphql/basics to use Nima [6854](https://github.com/helidon-io/helidon/pull/6854)
+- Examples: Update examples/logging to use Nima [6865](https://github.com/helidon-io/helidon/pull/6865) [6862](https://github.com/helidon-io/helidon/pull/6862) [6861](https://github.com/helidon-io/helidon/pull/6861)
+- Examples: Update examples/logging/logback-aot to use Nima [6866](https://github.com/helidon-io/helidon/pull/6866)
+- Examples: Updates to (standalone) Quickstart SE to use Nima and @ServerTest [6770](https://github.com/helidon-io/helidon/pull/6770)
+- Examples: Updates to Quickstart SE to use Nima and @ServerTest [6766](https://github.com/helidon-io/helidon/pull/6766)
+- Examples: archetypes generating poorly formatted code [6622](https://github.com/helidon-io/helidon/pull/6622)
+
+
+## [4.0.0-ALPHA6]
+
+This is the sixth Alpha build of Helidon 4.0.0 and is intended as a preview release only. Do not use this release in production. It is suitable only for experimentation. APIs are subject to change. Documentation is incomplete. And some functionality is experimental and not fully tested.
+
+The big news in Helidon 4.0.0 is the introduction of Helidon Nima -- a [ground up webserver implementation based on JDK Project Loom virtual threads](https://medium.com/helidon/helidon-n%C3%ADma-helidon-on-virtual-threads-130bb2ea2088). Helidon 4.0.0 is a major release that includes significant new features and fixes. As a major release it also includes backward incompatible API changes.
+
+Java 20 or newer is required to use Heldon 4.0.0-ALPHA6.
+
+### CHANGES
+
+- Common: Use helidon-common-config where possible/applicable [6448](https://github.com/helidon-io/helidon/pull/6448)
+- Config: Escape the key when copying a config node [6296](https://github.com/helidon-io/helidon/pull/6296)
+- Logging: Logging properties file clean up [6367](https://github.com/helidon-io/helidon/pull/6367)
+- Logging: Remove FileHandler from logging.properties [6364](https://github.com/helidon-io/helidon/pull/6364)
+- Messaging: 6303 JMS JNDI destination support [6305](https://github.com/helidon-io/helidon/pull/6305)
+- Pico: Builder define default methods [6294](https://github.com/helidon-io/helidon/pull/6294)
+- Pico: Pico and Builder Exception conventions [6525](https://github.com/helidon-io/helidon/pull/6525)
+- Pico: no arg constructor support on pico interceptors [6552](https://github.com/helidon-io/helidon/pull/6552)
+- Pico: pico runtime services [5750](https://github.com/helidon-io/helidon/pull/5750)
+- Pico: renaming pico module names and api package names [6573](https://github.com/helidon-io/helidon/pull/6573)
+- WebClient: Complete shortcut methods for all HTTP methods for the WebClient [6358](https://github.com/helidon-io/helidon/pull/6358)
+- WebClient: Forward port of DNS resolver for Webclient [6551](https://github.com/helidon-io/helidon/pull/6551)
+- WebClient: HTTP/2 Client with flow-control [6399](https://github.com/helidon-io/helidon/pull/6399)
+- WebClient: Improve ClientRequestImpl [6208](https://github.com/helidon-io/helidon/pull/6208)
+- WebServer: Add requested URI discovery support [6030](https://github.com/helidon-io/helidon/pull/6030)
+- WebServer: Added shortcut methods for registering `MediaSupport` [6564](https://github.com/helidon-io/helidon/pull/6564)
+- WebServer: Capture and propagate the CCL in ThreadPerTaskExecutor  [6322](https://github.com/helidon-io/helidon/pull/6322)
+- WebServer: Complete Webserver HTTP routing shortcut methods [6404](https://github.com/helidon-io/helidon/pull/6404)
+- WebServer: Do not split headers and payload into two different buffers [6491](https://github.com/helidon-io/helidon/pull/6491)
+- WebServer: Error handling removed from the filter chain [6415](https://github.com/helidon-io/helidon/pull/6415)
+- WebServer: Fix artifact ID, typo in name [6494](https://github.com/helidon-io/helidon/pull/6494)
+- WebServer: Handle zero or more spaces after commas when parsing Accept-Encoding [6380](https://github.com/helidon-io/helidon/pull/6380)
+- WebServer: Issue 5383: Added Content-Encoding header check when content encoding is disabled. [6267](https://github.com/helidon-io/helidon/pull/6267)
+- WebServer: Issue 6278: Programmatically control media providers with Nima WebServer [6412](https://github.com/helidon-io/helidon/pull/6412)
+- WebServer: Jackson media support for Níma [6432](https://github.com/helidon-io/helidon/pull/6432)
+- WebServer: Make size of header buffer independent of payload size [6475](https://github.com/helidon-io/helidon/pull/6475)
+- WebServer: Nima media support [6507](https://github.com/helidon-io/helidon/pull/6507)
+- WebServer: SSE API and implementation in Nima [6096](https://github.com/helidon-io/helidon/pull/6096)
+- WebServer: Wrap underlying output stream with a buffered one whose buffer size is configurable [6509](https://github.com/helidon-io/helidon/pull/6509)
+- WebSocket: Renamed receive() method to onMessage() in WsListener [6571](https://github.com/helidon-io/helidon/pull/6571)
+- Build: Upgrade Java to 20 GA [6474](https://github.com/helidon-io/helidon/pull/6474)
+- Dependencies: Adopt SnakeYAML 2.0; add integration tests for reactive and Nima [6535](https://github.com/helidon-io/helidon/pull/6535)
+- Dependencies: JWT-Auth upgrade to 2.1 version [6268](https://github.com/helidon-io/helidon/pull/6268)
+- Dependencies: Upgrade graphql-java to 17.5 [6540](https://github.com/helidon-io/helidon/pull/6540)
+- Docs: Add new dirs and docs for Nima 4 [6398](https://github.com/helidon-io/helidon/pull/6398)
+- Docs: Created Nima dir for docs [6306](https://github.com/helidon-io/helidon/pull/6306)
+- Docs: New documenation for FT in Nima [6565](https://github.com/helidon-io/helidon/pull/6565)
+- Docs: New document that describes Nima's SSE APIs [6332](https://github.com/helidon-io/helidon/pull/6332)
+- Docs: Remove claim that metrics are propagated from server to client [6361](https://github.com/helidon-io/helidon/pull/6361)
+- Examples: Add OCI MP Archetype (4.x) [6147](https://github.com/helidon-io/helidon/pull/6147)
+- Examples: Update mustache format in archetype files [6286](https://github.com/helidon-io/helidon/pull/6286)
+- Tests: Fix RC in JMS error test [6375](https://github.com/helidon-io/helidon/pull/6375)
+- Tests: JMS intermittent test fix [6392](https://github.com/helidon-io/helidon/pull/6392)
+- Tests: Re-enable tests [6359](https://github.com/helidon-io/helidon/pull/6359) [6355](https://github.com/helidon-io/helidon/pull/6355) [6356](https://github.com/helidon-io/helidon/pull/6356) [6357](https://github.com/helidon-io/helidon/pull/6357)
+- Tests: TestDisabledMetrics.java in microprofile/metrics [6436](https://github.com/helidon-io/helidon/pull/6436)
+- Tests: TestExtendedKPIMetrics.java from microprofile/metrics as it i… [6437](https://github.com/helidon-io/helidon/pull/6437)
+- Tests: Update bookstore test for Nima to add jsonb and jackson media [6577](https://github.com/helidon-io/helidon/pull/6577)
+- Tests: Use Hamcrest assertions instead of JUnit in examples/todo-app (#1749) [6293](https://github.com/helidon-io/helidon/pull/6293) and others
+- Tests: nima bookstore test [6349](https://github.com/helidon-io/helidon/pull/6349)
+
+## [4.0.0-ALPHA5]
+
+This is the fifth Alpha build of Helidon 4.0.0 and is intended as a preview release only. Do not use this release in production. It is suitable only for experimentation. APIs are subject to change. Documentation is incomplete. And some functionality is experimental and not fully tested.
+
+The big news in Helidon 4.0.0 is the introduction of Helidon Nima -- a [ground up webserver implementation based on JDK Project Loom virtual threads](https://medium.com/helidon/helidon-n%C3%ADma-helidon-on-virtual-threads-130bb2ea2088). 
+
+Helidon 4.0.0 is a major release that includes significant new features and fixes. As a major release it also includes some backward incompatible API changes.
+
+Java 19 or newer is required to use Heldon 4.0.0-ALPHA5.
+
+### CHANGES
+
+- Config: Configuration fixes [6145](https://github.com/helidon-io/helidon/pull/6145)
+- Config: Describe disabling config token replacement [6170](https://github.com/helidon-io/helidon/pull/6170)
+- FaultTolerance: Reactive FT Module Info fix [6238](https://github.com/helidon-io/helidon/pull/6238)
+- HTTP2: Issue 5425:  Added configurable validate-path and max-concurrent-streams to HTTP 2. [5981](https://github.com/helidon-io/helidon/pull/5981)
+- Media: Reactive Media Common deprecated cleanup [6098](https://github.com/helidon-io/helidon/pull/6098)
+- Messaging: AQ connector @ConnectorAttribute [6038](https://github.com/helidon-io/helidon/pull/6038)
+- OCI: Register OciMetricsSupport service only when enable flag is set to true [6053](https://github.com/helidon-io/helidon/pull/6053)
+- Security: Nima and Reactive implementation of OIDC provider separated [6055](https://github.com/helidon-io/helidon/pull/6055)
+- Security: OIDC logout functionality fixed [6131](https://github.com/helidon-io/helidon/pull/6131)
+- Security: Reloadable server TLS KeyStore [5964](https://github.com/helidon-io/helidon/pull/5964)
+- Tracing: Fix order of initialization of tracing and security. (#5987) [6034](https://github.com/helidon-io/helidon/pull/6034)
+- Tracing: Fix parent handling in OpenTelemetry [6092](https://github.com/helidon-io/helidon/pull/6092)
+- WebClient: Need to use a ConcurrentHashMap in DefaultDnsResolver [6207](https://github.com/helidon-io/helidon/pull/6207)
+- WebServer: 100 continue request reset fix [6251](https://github.com/helidon-io/helidon/pull/6251)
+- WebServer: 100 continue triggered by content request [5965](https://github.com/helidon-io/helidon/pull/5965)
+- WebServer: ContentEncodingContext Builder and passing ContentEncodingContext instance from WebServer to Http1Connection. [5921](https://github.com/helidon-io/helidon/pull/5921)
+- WebServer: Port to Nima of enhancement to allow WebSocket applications on different ports [6004](https://github.com/helidon-io/helidon/pull/6004)
+- WebServer: Proposal to implement a more efficient webserver shutdown strategy [5876](https://github.com/helidon-io/helidon/pull/5876)
+- WebServer: Refactor Níma connection context [6109](https://github.com/helidon-io/helidon/pull/6109)
+- WebServer: Static content update [6195](https://github.com/helidon-io/helidon/pull/6195)
+- WebServer: Switch default back-pressure strategy to AUTO_FLUSH from LINEAR. [5983](https://github.com/helidon-io/helidon/pull/5983)
+- WebServer: Update BodyPart to return Optional instead of a nullable String [6101](https://github.com/helidon-io/helidon/pull/6101)
+- Webserver: Support for interruption of HTTP/2 connections for efficient shutdowns [6041](https://github.com/helidon-io/helidon/pull/6041)
+- Build: Configure helidon-mave-plugin jlink-image to use --enable-preview [6048](https://github.com/helidon-io/helidon/pull/6048)
+- Build: Correct arrangement of fields, methods and inner types. [6114](https://github.com/helidon-io/helidon/pull/6114)
+- Build: Fix duplicate maven-failsafe-plugin declaration in dbclient integration test [6241](https://github.com/helidon-io/helidon/pull/6241)
+- Build: Idea code style [6111](https://github.com/helidon-io/helidon/pull/6111)
+- Build: Remove user specific package from the code style. [6144](https://github.com/helidon-io/helidon/pull/6144)
+- Build: Use https in pom.xml schemaLocation - iteration 1 (#5657) [6043](https://github.com/helidon-io/helidon/pull/6043) and others
+- Dependencies: Cleanup Helidon BOM by removing artifacts that are not deployed [6047](https://github.com/helidon-io/helidon/pull/6047)
+- Dependencies: Upgrade Jersey 3.1.1 [6171](https://github.com/helidon-io/helidon/pull/6171)
+- Dependencies: Upgrade Weld to 5.x #5815 [5830](https://github.com/helidon-io/helidon/pull/5830)
+- Dependencies: jakarta.activation cleanup [6138](https://github.com/helidon-io/helidon/pull/6138)
+- Docs: Restore navbar glyphs [6179](https://github.com/helidon-io/helidon/pull/6179)
+- Examples: Add application parent pom for Nima applications. Use in nima examples. [6232](https://github.com/helidon-io/helidon/pull/6232)
+- Examples: Nima Quickstart Archetype [6229](https://github.com/helidon-io/helidon/pull/6229)
+- Tests: Use Hamcrest assertions instead of JUnit [6160](https://github.com/helidon-io/helidon/pull/6160) and others
+- Tests: LRA TCK failing randomly #6106 [6107](https://github.com/helidon-io/helidon/pull/6107)
+- Tests: intermittent issue on OciMetricsSupportTest [6151](https://github.com/helidon-io/helidon/pull/6151)
+
+
+## [4.0.0-ALPHA4]
+
+This is the fourth Alpha build of Helidon 4.0.0 and is intended as a preview release only. Do not use this release in production. It is suitable only for experimentation. APIs are subject to change. Documentation is incomplete. And some functionality is experimental and not fully tested.
+
+The big news in Helidon 4.0.0 is the introduction of Helidon Nima -- a [ground up webserver implementation based on JDK Project Loom virtual threads](https://medium.com/helidon/helidon-n%C3%ADma-helidon-on-virtual-threads-130bb2ea2088). 
+
+Helidon 4.0.0 is a major release that includes significant new features and fixes. As a major release it also includes some backward incompatible API changes.
+
+Java 19 or newer is required to use Heldon 4.0.0-ALPHA4.
+
+### MicroProfile Support
+
+4.0.0-ALPHA4 now supports MicroProfile 5 running on Nima WebServer. Please give it a try! If you are upgrading an existing Helidon 3.x MicroProfile application and run into an error concerning `io.common.HelidonConsoleHandler` then change `logging.properties` to use `io.helidon.logging.jul.HelidonConsoleHandler` instead.
+
+### CHANGES
+
+- Logging: Change JUL to System.Logger in most modules  [5936](https://github.com/helidon-io/helidon/pull/5936)
+- Messaging: WLS JMS Object-Based Security [5852](https://github.com/helidon-io/helidon/pull/5852)
+- MicroProfile: Deprecate MicroProfile Tracing [5909](https://github.com/helidon-io/helidon/pull/5909)
+- OCI: Replace OCI Java SDK shaded jar with v3 for OCI integration [5908](https://github.com/helidon-io/helidon/pull/5908)
+- OCI: helidon metrics to oci integration [5945](https://github.com/helidon-io/helidon/pull/5945)
+- Pico:  Builder updates, fixes and enhancements [5977](https://github.com/helidon-io/helidon/pull/5977)
+- Security: Default tenant is not included for propagation [5900](https://github.com/helidon-io/helidon/pull/5900)
+- Security: Oidc tenant name now properly escaped [5873](https://github.com/helidon-io/helidon/pull/5873)
+- Tests: Dbclient Integration Tests Fixed [4860](https://github.com/helidon-io/helidon/pull/4860)
+- WebServer: implement a more efficient webserver shutdown strategy [5876](https://github.com/helidon-io/helidon/pull/5876/)
+- WebServer: Shutdown hook alignment Níma and MP. [5913](https://github.com/helidon-io/helidon/pull/5913)
+- WebSocket: UriQuery should not support null parameters. [5950](https://github.com/helidon-io/helidon/pull/5950)
+- WebSocket: client and testing update [5831](https://github.com/helidon-io/helidon/pull/5831)
+- Dependencies: Upgrade OCI SDK to 3.2.1 [5956](https://github.com/helidon-io/helidon/pull/5956)
+- Docs: Documentation updates to correct wrong instructions for HOCON config parsing [5975](https://github.com/helidon-io/helidon/pull/5975)
+- Examples: examples missing helidon-config-yaml dependency [5919](https://github.com/helidon-io/helidon/pull/5919)
+- HTTP/2: Configurable protocols [5883](https://github.com/helidon-io/helidon/pull/5883)
 
 ## [4.0.0-ALPHA3]
 
@@ -248,8 +567,10 @@ Helidon 4.0.0 is a major release that includes significant new features and fixe
 - MicroProfile: MP path based static content should use index.html (4.x) [4737](https://github.com/oracle/helidon/pull/4737)
 - Build: 4.0 version and poms [4655](https://github.com/oracle/helidon/pull/4655)
 
-
+[4.0.0-M1]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA6...4.0.0-M1
+[4.0.0-ALPHA6]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA5...4.0.0-ALPHA6
+[4.0.0-ALPHA5]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA4...4.0.0-ALPHA5
+[4.0.0-ALPHA4]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA3...4.0.0-ALPHA4
 [4.0.0-ALPHA3]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA2...4.0.0-ALPHA3
 [4.0.0-ALPHA2]: https://github.com/oracle/helidon/compare/4.0.0-ALPHA1...4.0.0-ALPHA2
 [4.0.0-ALPHA1]: https://github.com/oracle/helidon/compare/main...4.0.0-ALPHA1
-
